tests/snapshots/tui_operation_select__operation_picker_oldest_commit_omits_move.snap
---
source: tests/tui_operation_select.rs
expression: render_picker(&mut app)
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 24 },
    content: [
        "SHA        Title                                                                ",
        "11111111   Add feature X                                                        ",
        "22222222   Re┌ Operations ────────────────────────────────────────┐             ",
        "             │                                                    │             ",
        "             │ 11111111 Add feature X                             │             ",
        "             │                                                    │             ",
        "             │ Choose operation:                                  │             ",
        "             │                                                    │             ",
        "             │ ▸ Split         p      Break into commits          │             ",
        "             │   Squash        s      Merge into another          │             ",
        "             │   Fixup         f      Merge, keep its message     │             ",
        "             │   Reword        r      Edit the message            │             ",
        "             │   Drop          d      Delete this commit          │             ",
        "             │   Edit          E      Edit in a shell             │             ",
        "             │   Autofixup     F      Squash all fixup!/squash!   │             ",
        "             │   Undo          u      Undo last operation         │             ",
        "             │   Redo          Ctrl-r Redo last operation         │             ",
        "             │                                                    │             ",
        "             │              Enter Select   Esc Cancel             │             ",
        "             │                                                    │             ",
        "             └────────────────────────────────────────────────────┘             ",
        "                                                                                ",
        "                                                                                ",
        " 111111111111 2/2                                            Press 'h' for help ",
    ],
    styles: [
        x: 0, y: 0, fg: White, bg: Green, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 8, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 24, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 13, y: 2, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 67, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 13, y: 3, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 14, y: 3, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 66, y: 3, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 67, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 13, y: 4, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 14, y: 4, fg: White, bg: Black, underline: Reset, modifier: DIM,
        x: 37, y: 4, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 66, y: 4, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 67, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 13, y: 5, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 14, y: 5, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 66, y: 5, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 67, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 13, y: 6, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 14, y: 6, fg: Yellow, bg: Black, underline: Reset, modifier: BOLD,
        x: 32, y: 6, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 66, y: 6, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 67, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 13, y: 7, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 14, y: 7, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 66, y: 7, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 67, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 13, y: 8, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 14, y: 8, fg: Cyan, bg: Black, underline: Reset, modifier: BOLD,
        x: 31, y: 8, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 38, y: 8, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 56, y: 8, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 66, y: 8, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 67, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 13, y: 9, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 14, y: 9, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 31, y: 9, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 38, y: 9, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 56, y: 9, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 66, y: 9, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 67, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 13, y: 10, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 14, y: 10, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 31, y: 10, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 38, y: 10, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 61, y: 10, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 66, y: 10, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 67, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 13, y: 11, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 14, y: 11, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 31, y: 11, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 38, y: 11, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 54, y: 11, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 66, y: 11, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 67, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 13, y: 12, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 14, y: 12, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 31, y: 12, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 38, y: 12, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 56, y: 12, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 66, y: 12, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 67, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 13, y: 13, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 14, y: 13, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 31, y: 13, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 38, y: 13, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 53, y: 13, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 66, y: 13, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 67, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 13, y: 14, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 14, y: 14, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 31, y: 14, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 38, y: 14, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 63, y: 14, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 66, y: 14, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 67, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 13, y: 15, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 14, y: 15, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 31, y: 15, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 38, y: 15, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 57, y: 15, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 66, y: 15, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 67, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 13, y: 16, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 14, y: 16, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 31, y: 16, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 38, y: 16, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 57, y: 16, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 66, y: 16, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 67, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 13, y: 17, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 14, y: 17, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 66, y: 17, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 67, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 13, y: 18, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 14, y: 18, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 28, y: 18, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 34, y: 18, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 43, y: 18, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 47, y: 18, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 66, y: 18, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 67, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 13, y: 19, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 14, y: 19, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 66, y: 19, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 67, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 13, y: 20, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 67, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 23, fg: White, bg: Blue, underline: Reset, modifier: NONE,
        x: 61, y: 23, fg: White, bg: Blue, underline: Reset, modifier: DIM,
        x: 79, y: 23, fg: White, bg: Blue, underline: Reset, modifier: NONE,
    ]
}
