tests/snapshots/tui_operation_select__operation_picker_real_commit.snap
---
source: tests/tui_operation_select.rs
assertion_line: 59
expression: render_picker(&mut app)
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 24 },
    content: [
        "SHA        Title                                                                ",
        "11111111   Add feature X                                                        ",
        "22222222   Refa┌ Operations ────────────────────────────────────┐               ",
        "               │                                                │               ",
        "               │ 22222222 Refactor parser                       │               ",
        "               │                                                │               ",
        "               │ Choose operation:                              │               ",
        "               │                                                │               ",
        "               │ ▸ Split       p   Break into commits           │               ",
        "               │   Squash      s   Merge into another           │               ",
        "               │   Fixup       f   Merge, keep its message      │               ",
        "               │   Reword      r   Edit the message             │               ",
        "               │   Move        m   Reorder this commit          │               ",
        "               │   Drop        d   Delete this commit           │               ",
        "               │   Autofixup   F   Squash all fixup!/squash!    │               ",
        "               │   Undo        u   Undo last operation          │               ",
        "               │   Redo        C-r Redo last operation          │               ",
        "               │                                                │               ",
        "               │            Enter Select   Esc Cancel           │               ",
        "               │                                                │               ",
        "               └────────────────────────────────────────────────┘               ",
        "                                                                                ",
        "                                                                                ",
        " 222222222222 1/2                                            Press 'h' for help ",
    ],
    styles: [
        x: 0, y: 0, fg: White, bg: Green, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 8, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 15, y: 2, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 65, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 3, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 16, y: 3, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 64, y: 3, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 65, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 4, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 16, y: 4, fg: White, bg: Black, underline: Reset, modifier: DIM,
        x: 41, y: 4, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 64, y: 4, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 65, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 5, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 16, y: 5, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 64, y: 5, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 65, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 6, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 16, y: 6, fg: Yellow, bg: Black, underline: Reset, modifier: BOLD,
        x: 34, y: 6, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 64, y: 6, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 65, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 7, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 16, y: 7, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 64, y: 7, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 65, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 8, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 16, y: 8, fg: Cyan, bg: Black, underline: Reset, modifier: BOLD,
        x: 31, y: 8, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 35, y: 8, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 53, y: 8, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 64, y: 8, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 65, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 9, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 16, y: 9, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 31, y: 9, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 35, y: 9, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 53, y: 9, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 64, y: 9, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 65, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 10, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 16, y: 10, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 31, y: 10, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 35, y: 10, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 58, y: 10, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 64, y: 10, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 65, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 11, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 16, y: 11, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 31, y: 11, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 35, y: 11, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 51, y: 11, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 64, y: 11, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 65, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 12, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 16, y: 12, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 31, y: 12, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 35, y: 12, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 54, y: 12, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 64, y: 12, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 65, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 13, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 16, y: 13, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 31, y: 13, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 35, y: 13, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 53, y: 13, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 64, y: 13, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 65, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 14, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 16, y: 14, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 31, y: 14, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 35, y: 14, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 60, y: 14, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 64, y: 14, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 65, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 15, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 16, y: 15, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 31, y: 15, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 35, y: 15, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 54, y: 15, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 64, y: 15, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 65, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 16, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 16, y: 16, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 31, y: 16, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 35, y: 16, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 54, y: 16, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 64, y: 16, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 65, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 17, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 16, y: 17, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 64, y: 17, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 65, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 18, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 16, y: 18, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 28, y: 18, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 34, y: 18, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 43, y: 18, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 47, y: 18, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 64, y: 18, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 65, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 19, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 16, y: 19, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 64, y: 19, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 65, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 20, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 65, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 23, fg: White, bg: Blue, underline: Reset, modifier: NONE,
        x: 61, y: 23, fg: White, bg: Blue, underline: Reset, modifier: DIM,
        x: 79, y: 23, fg: White, bg: Blue, underline: Reset, modifier: NONE,
    ]
}
