tests/snapshots/tui_operation_select__operation_picker_unstaged_row.snap
---
source: tests/tui_operation_select.rs
expression: render_picker(&mut app)
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 24 },
    content: [
        "SHA        Title                                                                ",
        "11111111   Add feature X                                                        ",
        "staged     staged                                                               ",
        "unstaged   unstaged                                                             ",
        "                                                                                ",
        "               ┌ Operations ────────────────────────────────────┐               ",
        "               │                                                │               ",
        "               │ unstaged changes                               │               ",
        "               │                                                │               ",
        "               │ Choose operation:                              │               ",
        "               │                                                │               ",
        "               │ ▸ Stage all   a   Stage all changes            │               ",
        "               │   Undo        u   Undo last operation          │               ",
        "               │   Redo        C-r Redo last operation          │               ",
        "               │                                                │               ",
        "               │            Enter Select   Esc Cancel           │               ",
        "               │                                                │               ",
        "               └────────────────────────────────────────────────┘               ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        " unstaged 1/3                                                Press 'h' for help ",
    ],
    styles: [
        x: 0, y: 0, fg: White, bg: Green, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 2, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 2, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 8, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 19, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 5, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 65, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 6, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 16, y: 6, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 64, y: 6, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 65, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 7, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 16, y: 7, fg: White, bg: Black, underline: Reset, modifier: DIM,
        x: 33, y: 7, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 64, y: 7, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 65, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 8, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 16, y: 8, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 64, y: 8, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 65, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 9, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 16, y: 9, fg: Yellow, bg: Black, underline: Reset, modifier: BOLD,
        x: 34, y: 9, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 64, y: 9, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 65, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 10, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 16, y: 10, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 64, y: 10, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 65, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 11, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 16, y: 11, fg: Cyan, bg: Black, underline: Reset, modifier: BOLD,
        x: 31, y: 11, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 35, y: 11, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 52, y: 11, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 64, y: 11, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 65, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 12, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 16, y: 12, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 31, y: 12, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 35, y: 12, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 54, y: 12, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 64, y: 12, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 65, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 13, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 16, y: 13, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 31, y: 13, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 35, y: 13, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 54, y: 13, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 64, y: 13, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 65, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 14, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 16, y: 14, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 64, y: 14, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 65, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 15, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 16, y: 15, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 28, y: 15, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 34, y: 15, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 43, y: 15, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 47, y: 15, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 64, y: 15, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 65, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 16, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 16, y: 16, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 64, y: 16, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 65, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 17, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 65, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 23, fg: White, bg: Blue, underline: Reset, modifier: NONE,
        x: 61, y: 23, fg: White, bg: Blue, underline: Reset, modifier: DIM,
        x: 79, y: 23, fg: White, bg: Blue, underline: Reset, modifier: NONE,
    ]
}
